# Model_Garbage_Collection

./: .gitignore  Edge_Assignor.ipynb  README-Edge_Assignor.md  README.md  main.py  pyproject.toml  test.ipynb
app/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  main.tsx  store.ts  theme.ts
app/frontend/src/components/: CounterCard.tsx  GraphView.tsx  StatsCard.tsx  TableView.tsx  TriToggle.tsx  UserCard.tsx
data/: alzheimers_nodes.json  alzheimers_triples.csv  example_edges.jsonl
docs/: pipeline-usage.md  production-pipeline-usage.md
notebooks/: model_testing.ipynb
outputs/: antijoin_alzheimers_llm-backbone.csv  antijoin_alzheimers_llm.csv  antijoin_alzheimers_llm_rag.csv  antijoin_alzheimers_random.csv  bedrock_filled_test.csv  bedrock_rag_filled_test.csv  modified_chunk_50%_removed.csv  randomly_assigned_edges.csv
outputs/cytoscape/: alzheimers_llm.json  alzheimers_llm_rag-backbone.json  alzheimers_llm_rag.json  alzheimers_random.json
src/gnn/: README_HITL.md  convert_csv_to_triples.py  extract.py  generate_synthetic_edges.py  run_hitl_prep.sh
src/gnn/.ipynb_checkpoints/: model-checkpoint.py
src/gnn/lcilp/: score_all_edges.py  score_edges.py  test_migration.py  test_ranking.py  train.py  verify_migration.py
src/knowledge-graph/: create_cytoscape_files.py  download.py  download_nodes.py  extract.py  triples_to_csv.py
src/knowledge-graph/.ipynb_checkpoints/: extract-checkpoint.py  synthetic_llm-checkpoint.py  synthetic_random-checkpoint.py
src/ux/: chat.py  select_edges_for_review.py
(+37 files in other folders)
