[project]
name = "model-garbage-collection"
version = "0.1.0"
description = "Biomedical Knowledge Graph Pruning with GNN"
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "torch==2.1.2",
    "dgl==1.1.3",
    "numpy>=1.24.3,<2.0",
    "scipy==1.10.1",
    "scikit-learn==1.3.2",
    "networkx==3.1",
    "lmdb>=1.4.1",
    "tqdm==4.66.1",
    "packaging>=25.0",
    "matplotlib>=3.9.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "sentence-transformers",
    "langchain",
    "chromadb"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
